rheticus-gui/app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";

// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower
.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

body {
    padding: 0;
    overflow: hidden !important;
}
html {
    padding: 0;
    overflow: hidden !important;
}


/* Everything but the jumbotron gets side spacing for mobile first views */

.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}


/* Custom page header */

.header {
	position: absolute;
	z-index: 2;
	top: 2%;
	left: 1%;
	background-color: rgba(255, 255, 255, 0.4);
	border-radius: 15px;
	padding: 0;

    /* Make the masthead heading the same height as the navigation */
    h3 {
        margin-top: 0;
        margin-bottom: 0;
        line-height: 40px;
        padding-bottom: 19px;
    }
}
.brand {
    width: 14em;
	margin: 5px;
}


/* Custom page footer */

.footer {
    padding-top: 5px;
    color: #000;
    border-top-right-radius: 5px;
	background-color: rgba(255, 255, 255, 0.4);
}

.container-narrow > hr {
    margin: 30px 0;
}


/* Sticky footer styles
-------------------------------------------------- */

html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

.footer {
    position: absolute;
    bottom: 0;
    /*width: 100%;
    /* Set the fixed height of the footer here */
	/*background-color: #f5f5f5;*/
	z-index: 1;
}
.footer div p {
	margin:0;
}
.container {
	padding-left: 0px;
    padding-right: pxpx;
}


/* Responsive: Portrait tablets and up */

@media screen and (min-width: 768px) {
    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .container,
    .footer {
        padding-left: 0 !important;
        margin: 0 !important;
    }
    /* Space out the masthead */
    .header {
        margin-bottom: 30px;
    }
    .navbar {
        margin-bottom: 0px;
    }
    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
        border-bottom: 0;
    }
}


/* Overrides */

md-input-container .md-input {
  -webkit-order: 2;
      -ms-flex-order: 2;
          order: 2;
  display: block;
  margin-top: 0;
  background: none;
  padding-top: 2px;
  padding-bottom: 1px;
  padding-left: 2px;
  padding-right: 2px;
  border-width: 0 0 1px 0;
  line-height: 26px;
  height: 30px;
  -ms-flex-preferred-size: 100%;
  border-radius: 0;
  border-style: solid;
  width: 100%;
  box-sizing: border-box;
  float: left; }

  md-toolbar {
    box-sizing: border-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
    position: relative;
    z-index: 2;
    font-size: 20px;
    max-height: 55px;
    width: 100%; }

    .md-toolbar-tools {
      font-size: 20px;
      letter-spacing: 0.005em;
      box-sizing: border-box;
      font-weight: 400;
      display: -webkit-flex;
      display: -ms-flexbox;
      display: flex;
      -webkit-align-items: center;
          -ms-flex-align: center;
              align-items: center;
      -webkit-flex-direction: row;
          -ms-flex-direction: row;
              flex-direction: row;
      width: 100%;
      height: 55px;
      max-height: 55px;
      padding: 0 16px;
      margin: 0; }

.navbar-default{
	background-color: transparent;
	border-color: transparent;;
}

.navbar-nav > li > a {
    cursor: pointer;
}
.navbar-right {
	background-color: #f8f8f8;
	border-radius: 4px;
}

.navbar .container {
	width: 100%;
}

.popover-inner {
    width: 100%;
	padding: 5px;
}

.popover-login{
	line-height: 1;
	font-size: 12px;
}

.login-button {
	height: auto !important;
    padding: 5px !important;
    width: auto !important;
	font-family: inherit;
}

.ng-invalid.ng-dirty {
	border-color: #FA787E;
}

.ng-valid.ng-dirty {
	border-color: #78FA89;
}

.form-control {
	font-size: 12px;
    height: 24px;
    line-height: 1.2;
    padding: 2px 12px;
}

.popover {
    width: 450px !important;
    /*max-width: 350px !important;
	height: 350px !important;*/
	/*top: -60px !important;*/
}
/*
.popover.left > .arrow {
	top: 20%;
}*/

.popover-content {
    width: 100%;
    height: 100%;
}

.popover-content .ng-scope > div {
    padding-bottom: 6%;
}


.jslider {
    width: 97%;
}

.jslider div.jslider-value,
.jslider div.jslider-label {
    top: -16px
}


/*ol interface*/

.ol-zoomslider {
    left: 0.65em !important;
    top: 8.5em !important;
}
.ol-overlaycontainer-stopevent .ol-zoom{
    height: 3.85em;
    top: 3em !important;
	right: 0.5em !important;
	left: auto !important;

}

.ol-zoom .ol-zoom-out {
    border-radius: 0 0 2px 2px;
    bottom: 3px;
    position: absolute;
}
.ol-zoomslider-thumb {
    margin: 0 0 0 1px !important;
}
.ol-scale-line {
    background: none repeat scroll 0 0 rgba(0, 60, 136, 0.3);
    border-radius: 4px;
    bottom: 10px !important;
    left: 8px;
    padding: 2px;
    position: fixed !important;
}

.pagination {
	margin:0;
}

.table {
	margin-bottom : 1px;
}
.legenda {
    position: fixed;
    z-index: 1060;
    bottom: 65px;
    left: 8px;
    border-radius: 4px;
    padding: 2px;
    background-color: rgba(255, 255, 255, 0.4);
	margin: 1px;
}

.switchpanel {
    position: fixed;
    z-index: 1060;
    bottom: 40px;
    left: 8px;
	max-width: 440px;
	height: auto;
	min-height: 50px;
    border-radius: 4px;
    padding: 2px;
    background-color: rgba(255, 255, 255, 0.4);
	margin: 1px;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* IE/Edge */
  user-select: none;           /* non-prefixed version, currently
                                  not supported by any browser */
}


.switchpanelegend{
	margin-left: 7px;
	margin-right: 7px;
}
.switchpaneltop{
	margin: 7px;
	margin-top: 10px;
}

.switchpanelminimizer{
	margin-left : 100%;
}

.switchpanelabel{
	color: #fff;
	display: block;
	font-size: 12px;
}
.switchpanelabelmin{
	color: #fff;
	display: block;
	font-size: 11px;
	margin-left : 7px;
}

.switchpanelabel2{
	color: #fff;
	font-size: 11px;
	margin-left : 7px;
}
.switchpanelabel2big{
	color: #fff;
	font-size: 12px;
}

.keepoff {
    top: -10000px;
    position: absolute;
}

/* timeline chart*/

.chart {
	shape-rendering: crispEdges;
}

.mini text {
	font: 9px sans-serif;
}

.main text {
	font: 12px sans-serif;
}

.miniItem {
	fill: white;
	fill-opacity: .7;
	stroke-width: 6;
}

.miniItem0 {
	fill: darksalmon;
	stroke-width: 6;
}

.miniItem1 {
	fill: darkolivegreen;
	fill-opacity: .7;
	stroke-width: 6;
}

.miniItem2 {
	fill: slategray;
	fill-opacity: .7;
	stroke-width: 6;
}

.nv-point {
    stroke-opacity: 1!important;
    stroke-width: 1px!important;
    fill-opacity: 1!important;
}

.brush .extent {
	stroke: gray;
	fill: dodgerblue;
	fill-opacity: .365;
}
.axis line, .axis path {
	stroke: black;
}

.timeline {
	bottom: 50px;
	position: absolute;
	right: 50px;
	z-index: 1060;
	background-color: rgba(255, 255, 255, 0.8);
	border-radius: 4px;
	padding: 2px;
	height: 270px;
	width: 50%;
}
table.gridtable {
	font-family: verdana,arial,sans-serif;
	font-size:11px;
	float: right;
	color:#333333;
	margin-top: 20px;
	border-width: 1px;
	border-color: #666666;
	border-collapse: collapse;
}
table.gridtable th {
	border-width: 1px;
	padding: 5px;
	color:#ffffff;
	border-style: solid;
	border-color: #666666;
	background-color: #007FFF;
}
table.gridtable td {
	border-width: 1px;
	padding: 3px;
	color:#333333;
	border-style: solid;
	border-color: #666666;
	background-color: #ffffff;
}
.close {
	margin:5px;
}


.functionSwitcher {
	z-index:3;
	top : 0.5em;
	right: 4em;
}

.map-control-panel {
	z-index:4;
	top: 7.4em;
	right:.5em;
}
.map-control-panel > div{
	right:0;
}

.layer-switcher {
    position: absolute;
    right: 0.5em;
    text-align: left;
	top: 14.8em !important;
}

.geocoderBar {
    vertical-align:middle;
    border-radius: 4px;
    font-size: 14px;
    height: 35px;
    width:  180px;
    color:  #000000;
}
.searchResult {
    background-color: #ffffff;
    margin-top: 3px;
    position: absolute;
    width: 180px;
}
.searchResult  > div{
	 border-bottom: 1px solid #ccc;
    -moz-user-select: none;
    cursor: pointer;
    font-size: 14px;
    padding: 6px 8px;
    vertical-align: middle;
}
.credits{
	z-index:1;
	bottom: 0.5em;
    right: 0.5em;
}
.credits > div{
	float:left;
}

.FullScreenHelp{
    height: 25px;
    position: absolute;
    right: 2.4em;
    top: 0.7em !important;
}

.ZoomControlsHelp {
    height: 50px;
    position: absolute;
    right: 2.4em;
    top: 3.0em !important;
}

.LayerSwitcherHelp {
    height: 25px;
    position: absolute;

    right: 2.3em;
    top: 14.9em !important;
}

.AboutHelp {
    height: 1px;
	width: 25px;
    position: absolute;
    left: 7.5em;
    top: 2.25em !important;
}

.btn.active {
    background-color: #ff0000 !important;
}

.aoi {
	color:white;
	cursor:pointer;
}
.aoi:hover {
	color:white;
	cursor:pointer;
}

.chardinjs-helper-layer {
    z-index: 2;
}
.chardinjs-helper-layer.chardinjs-left {
    border-left: 1px solid white;
    margin-left: -30px;
}

.psTrendsClose {
    margin: 5px;
    position: absolute;
    right: 15px;
    top: 0;
}
.psTrendsChart {
  width: auto;
  height: auto;
}
.psTrendsOptions {
  width: auto;
  height: auto;
}
.psTrendsTable {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    max-height: 200px;
}


.psTrends {
	position: fixed;
	background-color: rgba(255, 255, 255, 0.8);
	border-radius: 4px;
	padding: 2px;
	right: 40px;
	width: 50%;
	z-index: 1060;
	bottom: 65px;
	/*min-width: 700px;
	min-height: 430px;*/
  width: 700px;
	height: 470px;
}
.featureInfoHeader {
	width: 100%;
	font-size: 15px;
    font-weight: bold;
    text-align: center;
}
.featureInfo {
    transition: all .3s ease-in-out;
    width: 100%;
    height: 100%;
    position: relative;
	z-index: 1060;
}
.featureInfo {
    &.active { left: 0; }
    .resizable {
        margin: auto;
        position: absolute;
		right: 3em;
		top: 0.5em;
    }
}
.resizable {
    text-align: center;
    box-sizing: border-box;
    width: 300px;
    height: 300px;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 4px;
}
.inner {
    box-sizing: border-box;
    overflow: auto;
    padding: 0.5em;
    height: 100%;
    width: 100%;
	font-size: 11px;
}
.flashMessage {
	position: absolute;
	bottom: -15px;
	right: 40px;
	z-index:2000;
}

